域名备案文档修正

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -250,156 +250,10 @@ ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEA5EZmrZZjbKb07yipeSkL+Hm+9mZAqyMfPu6BTAib+RVy
 
 - 将要绑定域名的 CNAME 指向 leanapp.cn（国内）或 avosapps.us（美国）
 
-请注意：
+### 域名备案
 
-* 根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎。
-* 独立域名要根据 Web 主机域名来解析，绑定完成后 Web 主机域名不可变更，否则会导致独立域名绑定失效。
-* 只有应用的生产环境可以绑定独立域名，预备环境不能绑定。
+LeanCloud 与上游服务商紧密合作，全力协助开发者高效、简单的完成域名备案。
 
-### 域名备案流程
+**备案之前要求云引擎已经部署，并且网站内容和备案申请的内容一致。仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的企业用户，请自行完成域名备案工作。**
 
-**域名备案的前置条件：云引擎已经部署，并且网站内容和备案申请的内容一致。**
-
-仅使用 {{productName}} 托管静态文件、未使用其他 LeanCloud 服务的企业用户，请自行完成域名备案工作。
-
-其他企业用户，若尚未在国内对其域名进行过备案，可以申请由我们协助来完成备案工作。其流程大致如下：
-
-1. 请提供相应资料，我们来录入；完成后提供备案订单号给你，请在联系备案服务商时提供。
-2. 请携带资料去 [备案提供商的核验点](#isp_inspection_office) 拍照；如果不方便，备案服务商会安排给你邮寄幕布，进行拍照验证，完成后请将其他资料签字盖章后一起邮寄给备案提供商。
-3. 提交备案到（公司所在地）管局（通信管理局）审核。
-
-<div class="callout callout-info">请注意：国内各地管局对备案的政策有差别，如北京地区对域名后缀有限制，陕西地区需要提交组织机构代码证，山东地区要求服务器必须托管在山东省内（因此我们无法为山东地区用户备案）等。具体请查询当地管局。</div>
-
-#### 第一步
-
-请提交以下资料，我们来帮你录入到系统（**图片请小于 100 KB，清晰可见**）：
-
-1. 单位名称、单位注册地址、单位通信地址、营业执照号码、营业执照副本扫描件；
-2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、QQ 号码；
-3. 如果网站负责人和法人不为同一人话，还需要提供网站负责人的姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、联系地址（可以为单位通信地址）、QQ 号码；
-4. 网站名称（4 个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个）
-5. 网站服务内容，请在以下列表中选择一项：
-  <div class="row">
-  <div class="col-sm-3">
-综合门户<br/>
-搜索引擎<br/>
-单位门户网站<br/>
-网络游戏<br/>
-网络广告<br/>
-即时通讯<br/>
-网上邮局<br/>
-网络新闻<br/>
-  </div>
-  <div class="col-sm-3">
-博客/个人空间<br/>
-网络广告/信息<br/>
-网络购物<br/>
-网上支付<br/>
-网上银行<br/>
-网上炒股/股票基金<br/>
-网络影视<br/>
-网络图片<br/>
-  </div>
-  <div class="col-sm-3">
-网络软件/下载<br/>
-网上求职<br/>
-网上交友/婚介<br/>
-网上房产<br/>
-网络教育<br/>
-网站建设<br/>
-WAP<br/>
-其它<br/>
-  </div>
-  <div class="col-sm-3">
-  </div>
-</div><br/>
-6. 网站语言，请在以下列表中选择一项：
-   <div class="row">
-  <div class="col-sm-3">
-中文简体<br/>
-中文繁体<br/>
-维吾尔语<br/>
-哈萨克语<br/>
-柯尔克孜语<br/>
-蒙古语<br/>
-  </div>
-  <div class="col-sm-3">
-藏语<br/>
-壮语<br/>
-朝鲜语<br/>
-彝语<br/>
-苗语<br/>
-英语<br/>
-  </div>
-  <div class="col-sm-3">
-日语<br/>
-法语<br/>
-俄罗斯语<br/>
-西班牙语<br/>
-阿拉伯语<br/>
-  </div>
-  <div class="col-sm-3">
-  </div>
-</div><br/>
-7. [绑定独立域名](#绑定独立域名) 所需的信息。
-8. 如果需要邮寄幕布，请提供你的地址、电话及联系人名字。
-
-如果企业之前已经备案过其他网站，即备案主体已经存在，此时还应向我们提供备案密码，我们才能完成资料录入工作。
-
-#### 第二步
-
-请去备案提供商的核验点拍照，或者提供你的地址，我们的备案接入商来给你邮寄幕布，因为幕布数量的关系，这里可能需要排队。以下资料需要准备：
-
-1. 企业营业执照副本复印件，盖公章；
-2. 企业法人身份证复印件（正反面复印在一张纸上），盖公章；
-3. 网站负责人身份证复印件（正反面复印在一张纸上），盖公章（如果和企业法人是同一人的话，此条可忽略）；
-4. 域名证书复印件；
-5. 网站备案信息真实性核验单（[下载填写样例](https://beianv2.ucloud.cn/files/%E7%BD%91%E7%AB%99%E7%9C%9F%E5%AE%9E%E6%80%A7%E6%A0%B8%E9%AA%8C%E5%8D%95%E6%A0%B7%E4%BE%8B.zip)）
-6. 网络安全责任书（[下载填写样例](https://beianv2.ucloud.cn/files/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%E4%B9%A6.zip)）
-7. 法人授权书复印件（[下载填写样例](https://beianv2.ucloud.cn/files/%E6%B3%95%E4%BA%BA%E6%8E%88%E6%9D%83%E4%B9%A6.zip)）
-
-<a id="isp_inspection_office" name="isp_inspection_office"></a>**备案拍照核验点地址：**
-
-<table>
-  <tr>
-    <th>城市</th>
-    <th>地址</th>
-    <th>统一预约电话</th>
-  </tr>
-  <tr>
-    <td>北京</td>
-    <td>北京市海淀区海淀北二街中关村 SOHO B 区 510 室</td>
-    <td rowspan="6">4000188113</td>
-  </tr>
-  <tr>
-    <td>上海</td>
-    <td>上海市杨浦区隆昌路 619 号城市概念创意园区 10 号楼 B 楼 7 层</td>
-  </tr>
-  <tr>
-    <td>深圳</td>
-    <td>深圳市南山区科技中二路威盛科技大厦 602 室</td>
-  </tr>
-</table>
-
-<a id="isp_mailing" name="isp_mailing"></a>**备案资料邮寄地址：**
-
-<div class="row">
-  <div class="col-sm-6">
-<p><strong>北京</strong></p>
-北京市海淀区中关村 SOHO 510 室<br/>
-网站备案部<br/>
-010-59718403<br/>
-  </div>
-  <div class="col-sm-6">
-<p><strong>上海</strong></p>
-上海市杨浦区隆昌路 619 号城市概念 10 号楼 B 楼 7 层<br/>
-备案组<br/>
-17301622003<br/>
-</div>
-</div>
-
-#### 第三步
-
-由我们和备案接入商来完成。备案完成后，我们再执行绑定操作。
-
-以上任何一个步骤有疑问都可以联系 <support@leancloud.rocks> 进行咨询。
+如果需要备案，进入`账号设置` - [域名管理](/settings.html#/setting/domain)中，按照步骤填写资料即可。
