--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -250,10 +250,8 @@ ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEA5EZmrZZjbKb07yipeSkL+Hm+9mZAqyMfPu6BTAib+RVy
 
 - 将要绑定域名的 CNAME 指向 leanapp.cn（国内）或 avosapps.us（美国）
 
-### 域名备案
-
-LeanCloud 与上游服务商紧密合作，全力协助开发者高效、简单的完成域名备案。
+#### 域名备案
 
 **备案之前要求云引擎已经部署，并且网站内容和备案申请的内容一致。仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的企业用户，请自行完成域名备案工作。**
 
-如果需要备案，进入`账号设置` - [域名管理](/settings.html#/setting/domain)中，按照步骤填写资料即可。
+如果需要备案，进入`账号设置` - [域名管理](/settings.html#/setting/domain)，按照步骤填写资料即可。
