--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -768,7 +768,7 @@ Cron 表达式的基本语法为：
 
 **备案之前要求云引擎已经部署，并且网站内容和备案申请的内容一致。仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的企业用户，请自行完成域名备案工作。**
 
-如果需要备案，进入`账号设置` - [域名管理](/settings.html#/setting/domain)，按照步骤填写资料即可。
+如果需要备案，进入[账号设置 > 域名管理](/settings.html#/setting/domain)，按照步骤填写资料即可。
 
 ### 使用框架
 
