--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -289,7 +289,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 简单的说， Pointer 就是一个外键的指针，只是在 LeanCloud 控制台做了显示优化。
 
-现在有一个新的需求：用户可以分享自己的 TodoFolder 到广场上，而其他用户看见可以给与评论，比如某一个宅男分享了自己列出的一个想买的游戏列表（TodoFolder 包含多个游戏名字），而我们用 Comment 对象来保存其他用户的评论以及是否点赞等相关信息，代码如下：
+现在有一个新的需求：用户可以分享自己的 TodoFolder 到广场上，而其他用户看见可以给与评论，比如某玩家分享了自己想买的游戏列表（TodoFolder 包含多个游戏名字），而我们用 Comment 对象来保存其他用户的评论以及是否点赞等相关信息，代码如下：
 
 {% block code_pointer_comment_one_to_many_todoFolder %}{% endblock %}
 
