--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -250,6 +250,12 @@ ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEA5EZmrZZjbKb07yipeSkL+Hm+9mZAqyMfPu6BTAib+RVy
 
 - 将要绑定域名的 CNAME 指向 leanapp.cn（国内）或 avosapps.us（美国）
 
+请注意：
+
+* 根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎。
+* 独立域名要根据 Web 主机域名来解析，绑定完成后 Web 主机域名不可变更，否则会导致独立域名绑定失效。
+* 只有应用的生产环境可以绑定独立域名，预备环境不能绑定。
+
 #### 域名备案
 
 **备案之前要求云引擎已经部署，并且网站内容和备案申请的内容一致。仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的企业用户，请自行完成域名备案工作。**
