--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -744,31 +744,15 @@ Cron 表达式的基本语法为：
 
 ### 绑定独立域名
 
-只有主域名需要备案，二级子域名不需要备案。独立域名要根据 Web 主机域名来解析，绑定完成后 Web 主机域名不可变更，否则会导致独立域名绑定失效。
+**国内节点绑定独立域名需要有 ICP 备案，只有主域名需要备案，二级子域名不需要备案；如果没有 ICP 备案，请参考 [域名备案](#域名备案)。**
 
-#### 主域名
-
-仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的用户，需要自行办理独立域名与应用绑定的相关手续。
-
-**请注意，根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎**。
-
-其他用户如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 / 技术支持](https://leanticket.cn/)，通过工单来提出申请：
-
-* 你已经绑定的 leanapp.cn 或 avosapps.us 二级子域名（请参考设置域名）
-* 要绑定的域名（必须是你名下的域名）
-* 你的注册邮箱（必须与发送者的邮箱一致）
-* 你想要绑定的 App Id（该应用必须位于注册邮箱的用户名下）
-* 你的域名的备案信息（**国内必须可以在工信部查询到，美国区不需要**）
-
-我们会在 3 个工作日内完成审核，如果审核通过将为你绑定域名。请在绑定操作完成后配置 DNS：
-
-- 将要绑定域名的 CNAME 或者 A 记录指向云引擎的二级子域名，如 myapp.leanapp.cn（国内）或 myapp.avosapps.us（美国），请以实际的应用二级子域名为准。
+如果需要域名绑定，进入[账号设置 > 域名绑定](/settings.html#/setting/domainbind)，按照步骤填写资料即可。
 
 #### 域名备案
 
 **备案之前要求云引擎已经部署，并且网站内容和备案申请的内容一致。仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的企业用户，请自行完成域名备案工作。**
 
-如果需要备案，进入[账号设置 > 域名管理](/settings.html#/setting/domainrecord)，按照步骤填写资料即可。
+如果需要备案，进入[账号设置 > 域名备案](/settings.html#/setting/domainrecord)，按照步骤填写资料即可。
 
 ### 使用框架
 
