fix(docs): [存储] Android 间隔号显示问题，补充发送验证邮件代码 (#1472)

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -1,7 +1,7 @@
 {% set appid = '{{appid}}' %}
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
-{% set middot = '&middot;' | safe %}
+{% set middot = '·' %}
 {% set link_to_blog_password_reset = '关于自定义邮件模板和验证链接，请参考《[自定义应用内用户重设密码和邮箱验证页面](https://blog.leancloud.cn/607/)》。' %}
 
 #  {{platform_title}} 数据存储开发指南
