--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -234,14 +234,16 @@ ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEA5EZmrZZjbKb07yipeSkL+Hm+9mZAqyMfPu6BTAib+RVy
 
 {% block section_timezone %}{% endblock %}
 
-## 绑定独立域名
+## 域名备案
 
-**国内节点绑定独立域名需要有 ICP 备案，只有主域名需要备案，二级子域名不需要备案；如果没有 ICP 备案，请参考 [域名备案流程](#域名备案)。**
+**备案之前要求云引擎已经部署，并且网站内容和备案申请的内容一致。仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的企业用户，需要自行完成域名备案工作。**
 
-如果需要域名绑定，进入[账号设置 > 域名绑定](/settings.html#/setting/domainbind)，按照步骤填写资料即可。
+如果需要备案，进入 [应用控制台 > 账号设置 > 域名备案](/settings.html#/setting/domainrecord)，按照步骤填写资料即可。
 
-#### 域名备案
+## 域名绑定
 
-**备案之前要求云引擎已经部署，并且网站内容和备案申请的内容一致。仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的企业用户，请自行完成域名备案工作。**
+**国内节点绑定独立域名需要有 ICP 备案，只有主域名需要备案，二级子域名不需要备案；如果没有 ICP 备案，请参考 [域名备案](#域名备案)。**
 
-如果需要备案，进入[账号设置 > 域名备案](/settings.html#/setting/domainrecord)，按照步骤填写资料即可。
+如果需要域名绑定，进入 [应用控制台 > 账号设置 > 域名绑定](/settings.html#/setting/domainbind)，按照步骤填写资料即可。
+
+
