feat(docs): [存储] 增加查询性能优化说明
Closes #1469

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -708,6 +708,18 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 `{{geoPointObject
 {% block text_platform_geoPoint_notice %}{% endblock %}
 
 {% block text_js_promise %}{% endblock %}
+
+### 查询性能优化
+
+影响查询性能的因素很多。特别是当查询结果的数量超过 10 万，查询性能显著下降或出现瓶颈时，开发者需要根据以下提示对查询进行优化。
+
+- 不等于和不包含查询（无法使用索引）
+- 通配符在前面的字符串查询（无法使用索引）
+- 有条件的 count（需要扫描所有数据）
+- skip 跳过较多的行数（相当于需要先查出被跳过的那些行）
+- 无索引的排序（另外除非复合索引同时覆盖了查询和排序，否则只有其中一个能使用索引）
+- 无索引的查询（另外除非复合索引同时覆盖了所有条件，否则未覆盖到的条件无法使用索引，如果未覆盖的条件区分度较低将会扫描较多的数据）
+
 ## 用户
 
 用户系统几乎是每款应用都要加入的功能。除了基本的注册、登录和密码重置，移动端开发还会使用手机号一键登录、短信验证码登录等功能。{{productName}} 提供了一系列接口来帮助开发者快速实现各种场景下的需求。
@@ -754,7 +766,7 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 `{{geoPointObject
 
 {% block text_logInOrSignUp_with_authData %}{% endblock %}
 
-#### 设置手机号码
+#### 设置手机号码
 
 微信、陌陌等流行应用都会建议用户将账号和一个手机号绑定，这样方便进行身份认证以及日后的密码找回等安全模块的使用。我们也提供了一整套发送短信验证码以及验证手机号的流程，这部分流程以及代码演示请参考 {{ link_to_sms_guide_doc }}。
 
