fix(docs): [存储]  修订查询性能优化说明

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -711,7 +711,7 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 `{{geoPointObject
 
 ### 查询性能优化
 
-影响查询性能的因素很多。特别是当查询结果的数量超过 10 万，查询性能显著下降或出现瓶颈时，开发者需要根据以下提示对查询进行优化。
+影响查询性能的因素很多。特别是当查询结果的数量超过 10 万，查询性能可能会显著下降或出现瓶颈。以下列举一些容易降低性能的查询方式，开发者可以据此进行有针对性的调整和优化，或尽量避免使用。
 
 - 不等于和不包含查询（无法使用索引）
 - 通配符在前面的字符串查询（无法使用索引）
