fix(docs): [云引擎] 云函数 - 增加 JS 切换生产和预备环境的代码 (#1485)
Closes #1470
更新云引擎 2.0 文档中的过时内容

--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -185,8 +185,11 @@ AVCloud.setProductionMode(false); // 调用预备环境
 ```php
 LeanClient::useProduction(false); // 调用预备环境
 ```
+```javascript
+AV.setProduction(false); // 调用预备环境
+```
 
-免费版云引擎应用只有「生产环境」，因此以上切换方法不适用。
+[免费版云引擎应用只有「生产环境」](leanengine_plan.html#免费版) ，因此以上切换方法不适用。
 
 
 ### 云函数错误响应码
