--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -5,14 +5,12 @@
 
 {% block updateToLeanEngine %}{% endblock %}
 
-云引擎允许你编写 JavaScript 或者 Python 代码，并部署到我们的云端，通过拦截 save 请求，在保存对象之前或之后做一些事情；你可以自定义业务函数，并通过 SDK 调用；你还可以调用部分第三方库来实现自己的业务逻辑，甚至还可以将整个网站架设在云引擎之上，我们提供了网站托管服务。
-
-现在我们将「云引擎 2.0」的功能做了升级，开放性更高，并且更名为「云引擎」，即 LeanEngine。老的云引擎产品将在一段时间内继续运行并且维护下去，但是云引擎上的所有功能都能在云引擎上 实现，并且自由度更高，因此我们强烈建议将项目改由云引擎来实现。
+云引擎允许你编写 JavaScript、Python 等代码，并部署到 LeanCloud 云端，通过拦截 save 请求，在保存对象之前或之后做一些事情；你可以自定义业务函数，并通过 SDK 调用；你还可以调用部分第三方库来实现自己的业务逻辑，甚至还可以将整个网站架设在云引擎之上，我们提供了网站托管服务。
 
 与旧版云引擎的区别在于：
 
 * **标准的运行环境**：之前云引擎是我们订制的一个沙箱运行环境，功能受限，并且代码只可以在云引擎环境运行，难以迁移到自己搭建的后端服务器上。而云引擎环境可以部署标准项目。
-* **多语言支持**：目前支持 Node.js 与 Python，将来会支持更多的编程语言运行环境。
+* **多语言支持**：目前支持 Node.js、Python、PHP、Java，未来会实现更多的编程语言运行环境。
 
 ## 命令行工具
 
