--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -59,8 +59,6 @@
 
 **提示**：旧版云引擎使用的以 `LC_` 开头的环境变量（如 `LC_APP_ID`）已经被弃用。为了保证代码兼容性，`LC_` 变量在一段时间内依然有效，但未来可能会完全失效。为了避免报错，建议使用 `LEANCLOUD_` 变量来替换。
 
-**提示**：如果在客户端想调用云引擎的预备环境，各个 SDK 都有类似于 `setProduction` 的方法，比如 [JavaScript SDK &middot; AV.setProduction(production)](/api-docs/javascript/symbols/AV.html#.setProduction)，其中 `production` 设置为 `0` 则该 SDK 将请求预备环境；设置为 `1` 将请求生产环境，默认为 `1`。
-
 ### 自定义环境变量
 
 你也可以在 [云引擎 > 设置](/cloud.html?appid={{appid}}#/conf) 页面中添加自定义的环境变量。其中名字必须是字母、数字、下划线且以字母开头，值必须是字符串，修改环境变量后会在下一次部署时生效。
@@ -68,6 +66,27 @@
 按照一般的实践，可以将一些配置项存储在环境变量中，这样可以在不修改代码的情况下，修改环境变量并重新部署，来改变程序的行为；或者可以将一些第三方服务的 Secret Key 存储在环境变量中，避免这些密钥直接出现在代码中。
 
 {% block code_calling_custom_variables %}{% endblock %}
+
+## 预备环境和生产环境
+
+对于免费版应用，云引擎只有一个「生产环境」，对应的域名是 `{{var_app_domain}}.leanapp.cn`。
+
+专业版应用会有一个额外的「预备环境」，对应域名 `stg-{{var_app_domain}}.leanapp.cn`，两个环境所访问的都是同样的数据，你可以用预备环境测试你的云引擎代码，每次部署先部署到预备环境，测试通过后再发布到生产环境；如果你希望有一个独立数据源的测试环境，建议单独创建一个应用。
+
+<div class="callout callout-info">有时请求云引擎会遇到 **No Application Configured 的错误**，通常是因为对应的环境没有部署代码。例如免费版应用没有预备环境，或专业版应用尚未发布代码到生产环境。</div>
+
+关于免费版和专业版的更多差别，请参考 [云引擎运行方案](leanengine_plan.html)。
+
+有些时候你可能需要知道当前云引擎运行在什么环境（开发环境、预备环境或生产环境），从而做不同的处理：
+
+{% block get_env %}{% endblock %}
+
+你应该注意到了，我们在请求云引擎的时候，通过 REST API 的特殊的 HTTP 头 `X-LC-Prod`，来区分调用的环境。
+
+* 0 表示调用预备环境
+* 1 表示调用生产环境
+
+<div class="callout callout-info">如果在客户端想调用云引擎的预备环境，各个 SDK 都有类似于 `setProduction` 的方法，比如 [JavaScript SDK API &middot; `AV.setProduction(production)`](/api-docs/javascript/symbols/AV.html#.setProduction)，其中 `production` 设置为 `0` 则该 SDK 将请求预备环境；设置为 `1` 将请求生产环境，默认为 `1`。</div>
 
 ## 存储数据
 
@@ -196,27 +215,6 @@ ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEA5EZmrZZjbKb07yipeSkL+Hm+9mZAqyMfPu6BTAib+RVy
 {% block https_redirect %}{% endblock %}
 
 部署并发布到生产环境之后，访问你的 {{productName}} 网站二级域名都会强制通过 HTTPS 访问。
-
-## 预备环境和生产环境
-
-对于免费版应用，云引擎只有一个「生产环境」，对应的域名是 `{{var_app_domain}}.leanapp.cn`。
-
-专业版应用会有一个额外的「预备环境」，对应域名 `stg-{{var_app_domain}}.leanapp.cn`，两个环境所访问的都是同样的数据，你可以用预备环境测试你的云引擎代码，每次部署先部署到预备环境，测试通过后再发布到生产环境；如果你希望有一个独立数据源的测试环境，建议单独创建一个应用。
-
-关于免费版和专业版的更多差别，请参考 [云引擎运行方案](leanengine_plan.html)。
-
-有些时候你可能需要知道当前云引擎运行在什么环境（开发环境、预备环境或生产环境），从而做不同的处理：
-
-{% block get_env %}{% endblock %}
-
-你应该注意到了，我们在请求云引擎的时候，通过 REST API 的特殊的 HTTP 头 `X-LC-Prod`，来区分调用的环境。
-
-* 0 表示调用预备环境
-* 1 表示调用生产环境
-
-具体到 SDK 内的调用，请看各个平台的 SDK 指南。
-
-有时请求云引擎会遇到 `No Application Configured` 的错误，通常是因为对应的环境没有部署代码。例如免费版应用没有预备环境，或专业版应用尚未发布代码到生产环境。
 
 ## 日志
 
