[云引擎 Node] 补充打开请求日志的方法 (#1442)

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -230,6 +230,8 @@ ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEA5EZmrZZjbKb07yipeSkL+Hm+9mZAqyMfPu6BTAib+RVy
 
 **注意**：日志单行最大 4096 个字符，多余部分会被丢弃；日志输出频率大于 600 条/分钟，多余的部分会被丢弃。
 
+{% block loggerExtraDescription %}{% endblock %}
+
 {% block section_timezone %}{% endblock %}
 
 ## 域名备案
