delete sub-title in index.html

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -32,9 +32,7 @@ isHome: true
         <div class="link-block doc-quick-start-btn">
           <h2>开发指南</h2>
           <ul>
-            <li class="dropdown-header">快速入门</li>
             <li><a href="start.html">安装与快速入门</a></li>
-            <li class="dropdown-header">详细指南</li>
             <li><a href="storage_overview.html">存储服务总览</a></li>
             <li><a href="data_security.html">数据安全详解</a></li>
             <li>数据存储开发指南（<a href="leanstorage_guide-android.html" style="font-style: italic">Android</a> <a href="leanstorage_guide-ios.html" style="font-style: italic">Objective-C</a> <a href="leanstorage_guide-js.html" style="font-style: italic">Javascript</a> <a href="leanstorage_guide-python.html" style="font-style: italic">Python</a> <a href="leanstorage_guide-php.html" style="font-style: italic">PHP</a> <a href="dotnet_guide.html" style="font-style: italic">.NET</a> <a href="unity_guide.html" style="font-style: italic">Unity3D</a> <a href="leanstorage_guide-java.html" style="font-style: italic">Java</a> <a href="leanstorage_guide-swift.html" style="font-style: italic">Swift</a>）</li>
@@ -70,9 +68,7 @@ isHome: true
         <div class="link-block doc-quick-start-btn">
           <h2>开发指南</h2>
           <ul>
-            <li class="dropdown-header">快速入门</li>
             <li><a href="leanengine_quickstart.html">安装与快速入门</a></li>
-            <li class="dropdown-header">详细指南</li>
             <li><a href="leanengine_overview.html">云引擎总览</a></li>
             <li><a href="leanengine_plan.html">云引擎运行方案</a></li>
             <li>网站托管开发指南（<a href="leanengine_webhosting_guide-node.html" style="font-style: italic">Node.js</a> <a href="leanengine_webhosting_guide-php.html" style="font-style: italic">PHP</a> <a href="leanengine_webhosting_guide-java.html" style="font-style: italic">Java</a>）</li>
@@ -107,12 +103,10 @@ isHome: true
         <div class="link-block doc-quick-start-btn">
           <h2>开发指南</h2>
           <ul>
-            <li class="dropdown-header">快速入门</li>
             <li><a href="start.html">安装与快速入门</a></li>
-            <li class="dropdown-header">详细指南</li>
             <li><a href="realtime_v2.html">实时通信服务总览</a></li>
             <li>通信基础库开发指南（<a href="realtime_guide-android.html" style="font-style: italic">Android</a> <a href="realtime_guide-ios.html" style="font-style: italic">Objective-C</a> <a href="realtime_guide-js.html" style="font-style: italic">Javascript</a> <a href="realtime_guide-dotnet.html" style="font-style: italic">.Net/Unity3D</a>）</li>
-            <li>UI 库 ChatKit 开发指南（<a href="chatkit-android.html" style="font-style: italic">Android</a> <a href="chatkit-ios.html" style="font-style: italic">Objective-C</a>）</li>
+            <li>UI 库 ChatKit 使用指南（<a href="chatkit-android.html" style="font-style: italic">Android</a> <a href="chatkit-ios.html" style="font-style: italic">Objective-C</a>）</li>
         </div>
       </div>
       <!-- .col-sm-4 -->
@@ -136,9 +130,7 @@ isHome: true
         <div class="link-block doc-quick-start-btn">
           <h2>开发指南</h2>
           <ul>
-            <li class="dropdown-header">快速入门</li>
             <li><a href="start.html">安装与快速入门</a></li>
-            <li class="dropdown-header">详细指南</li>
             <li><a href="push_guide.html">消息推送服务总览</a></li>
             <li>消息推送开发指南（<a href="android_push_guide.html" style="font-style: italic">Android</a> <a href="ios_push_guide.html" style="font-style: italic">Objective-C</a> <a href="js_push.html" style="font-style: italic">Javascript</a>）</li>
             <li><a href="android_push_guide.html#混合推送">Android 混合推送使用指南</a></li>
@@ -163,9 +155,8 @@ isHome: true
       <div class="link-block doc-quick-start-btn">
         <h1>移动统计</h1>
         <ul>
-          <li class="dropdown-header">快速入门</li>
+          <li class="dropdown-header">开发指南</li>
           <li><a href="start.html">安装与快速入门</a></li>
-          <li class="dropdown-header">详细指南</li>
           <li>统计服务使用指南（<a href="android_statistics.html" style="font-style: italic">Android</a> <a href="ios_statistics.html" style="font-style: italic">Objective-C</a> <a href="js_analytics.html" style="font-style: italic">Javascript</a> <a href="unity_statistics.html" style="font-style: italic">Unity3D</a>）</li>
           <li><a href="ios_crashreporting_guide.html">iOS/OSX 崩溃报告使用指南</a></li>
           <li class="dropdown-header">最佳实践</li>
