add sdk download hyperlink for tab

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,6 +7,9 @@ isHome: true
     {% if node=='qcloud' %}
     <h1 class="font-logo">Tencent App Builder Documentation</h1>
     <h4>TAB 移动开发工具由腾讯云、LeanCloud 联合推出，开发文档由 LeanCloud 提供。</h4>
+    <div class="row">
+      <a href="sdk_down.html">SDK 下载</a>
+    </div>
     {% else %}
     <h1 class="font-logo">LeanCloud Documentation</h1>
     <form class="hero-search" role="search" action="/search.html" method="get">
