--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -5,7 +5,6 @@
     </a>
 
     <ul class="footer-links pull-right">
-      <li><a href="/docs/">文档</a></li>
       <li class="muted">·</li>
       <li><a href="/pricing.html">价格</a></li>
       <li class="muted">·</li>
@@ -15,7 +14,7 @@
       <li class="muted">·</li>
       <li><a href="http://leancloud.cn/docs/faq.html" target="_self">常见问题</a></li>
       <li class="muted">·</li>
-      <li><a href="http://ticket.leancloud.cn/" target="_self"><span class="mobile-hide">技术</span>支持</a></li>
+      <li><a href="http://leanticket.cn" target="_self"><span class="mobile-hide">技术</span>支持</a></li>
       <!-- <li><a href="http://ticket.leancloud.cn/tickets?token={{user.session_token || 'Gs5Xw4vjyCznrP6OcgMheOWDuatVpbFPiL78eMo6JC0dENB8'}}" target="_blank"><span class="mobile-hide">用户</span>反馈</a></li> -->
       <li class="muted">·</li>
       <li><a href="//status.leancloud.cn/"><span class="mobile-hide">健康</span>状态</a></li>
