--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -109,7 +109,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><a href="leanengine_quickstart.html">安装</a></li>
+          <li><a href="leanengine_quickstart.html">快速入门</a></li>
           <li><a href="leanengine_overview.html">云引擎总览</a></li>
           <li><a href="leanengine_plan.html">云引擎运行方案</a></li>
           <li>
