add sdk download link for tab

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,6 +6,7 @@ isHome: true
     {% if node=='qcloud' %}
     <h1 class="font-logo">Tencent App Builder Documentation</h1>
     <h4>TAB 移动开发工具由腾讯云、LeanCloud 联合推出，开发文档由 LeanCloud 提供。</h4>
+    <div class="row"><a href="sdk_down.html">SDK 下载</a></div>
     {% else %}
     <h1 class="font-logo">Documentation</h1>
     <form class="hero-search" role="search" action="/search.html" method="get">
@@ -275,7 +276,6 @@ isHome: true
         <h3>最佳实践</h3>
         <ul class="list-unstyled">
           <li><a href="user_groups.html">如何进行用户群分析</a></li>
-          <li><a href="https://blog.leancloud.cn/5014/" target="_blank">在 Cordova 项目中使用 LeanCloud 推送</a></li>
         </ul>
         <h3>相关阅读</h3>
         <ul class="list-unstyled">
