fix(docs): [存储]  TAB 从 cos 上传图片，无法支持缩略图功能
Fixes #1535

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -419,7 +419,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 {% block text_download_progress %}请注意代码中**下载进度**数据的读取。{% endblock %}
 
 {% endblock %}
-
+{% if node !='qcloud' %}
 ### 图像缩略图
 
 保存图像时，如果想在下载原图之前先得到缩略图，方法如下：
@@ -427,7 +427,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 {% block code_file_image_thumbnail %}{% endblock %}
 
 <div class="callout callout-info">注意：<strong>图片最大不超过 20 M 才可以获取缩略图。</strong> </div>
-
+{% endif %}
 ### 文件元数据
 
 `{{fileObjectName}}` 的 `metaData` 属性，可以用来保存和获取该文件对象的元数据信息：
