chore: update test template

--- a/views/test.tmpl
+++ b/views/test.tmpl
@@ -1,5 +1,10 @@
-# 测试模版
+{# 效果：http://localhost:4000/test.html #}
 
-{% block test_block %}{% endblock %}
+# 测试 tmpl 模版和 nunjucks
 
-{% block test_block2 %}{% endblock %}
+效果：<http://localhost:4000/test.html>
+
+以下是子文档内容：
+
+{% block content %}{% endblock %}
+
