fix(docs): 对 TAB 隐藏 应用内社交 status、第三方登录 sns 和用户反馈 feedback 链接 (#1544)
* fix(docs): 对 TAB 隐藏 应用内社交 status、第三方登录 sns 和用户反馈 feedback 链接

Fixes #1543

* fixed unclosing if tag

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -185,13 +185,15 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">更多</a>
           <ul class="dropdown-menu">
+            {% if node != 'qcloud' %}
             <li><a href="status_system.html">应用内社交使用指南</a></li>
+            <li><a href="sns.html">第三方平台账号登录 SNS 开发指南</a></li>
+            <li><a href="feedback.html">用户反馈开发指南</a></li>
+            {% endif %}
             <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
             <li><a href="app_data_share.html">应用之间数据共享（Class 绑定）</a></li>
             <li><a href="user_groups.html">用户群分析指南</a></li>
             <li><a href="leaninsight_guide.html">离线数据分析使用指南</a></li>
-            <li><a href="sns.html">第三方平台账号登录 SNS 开发指南</a></li>
-            <li><a href="feedback.html">用户反馈开发指南</a></li>
             <li class="divider"></li>
             <li><a href="tutorials.html">教程</a></li>
            <li><a href="demo.html">Demo</a></li>
