--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -356,11 +356,12 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-4 col-md-4">
         <h3>开源组件</h3>
         <ul class="list-unstyled">
-          <li><a href="demo.html">开源 Demo 一览</a>
-          <li>
+          <li><a href="demo.html">开源 Demo 一览</a><li>
+          {% if node != 'qcloud' %}
           <li><a href="status_system.html">应用内社交组件</a></li>
           <li><a href="feedback.html">用户反馈组件</a></li>
           <li><a href="sns.html">第三方社交账号登录组件</a></li>
+          {% endif %}
           <li><a href="http://leancloud.sexy/" target="_blank">LeanCloud 开源社区</a></li>
         </ul>
       </div>
