add livekit-android to doc nav

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -57,6 +57,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-android.html">实时通信开发指南</a></li>
             <li><a href="chatkit-android.html">ChatKit 使用指南</a></li>
+            <li><a href="livekit-android.html">LiveKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="relation_guide-android.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-android.html">权限管理使用指南</a></li>
