--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -184,6 +184,12 @@ isHome: true
               <li><a href="chatkit-ios.html">Objective-C</a></li>
             </ul>
           </li>
+  	  <li>
+            <span>直播＋聊天解决方案 LiveKit 使用指南</span>
+            <ul class="list-unstyled list-platform">
+              <li><a href="livekit-android.html">Android</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
