chore(index): change s to S as in JavaScript

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -44,7 +44,7 @@ isHome: true
             <ul class="list-unstyled list-platform">
               <li><a href="leanstorage_guide-android.html">Android</a></li>
               <li><a href="leanstorage_guide-ios.html">Objective-C</a></li>
-              <li><a href="leanstorage_guide-js.html">Javascript</a></li>
+              <li><a href="leanstorage_guide-js.html">JavaScript</a></li>
               <li><a href="leanstorage_guide-python.html">Python</a></li>
               <li><a href="leanstorage_guide-php.html">PHP</a></li>
               <li><a href="dotnet_guide.html">.NET</a></li>
@@ -58,7 +58,7 @@ isHome: true
             <ul class="list-unstyled list-platform">
               <li><a href="relation_guide-android.html">Android</a></li>
               <li><a href="relation_guide-ios.html">Objective-C</a></li>
-              <li><a href="relation_guide-js.html">Javascript</a></li>
+              <li><a href="relation_guide-js.html">JavaScript</a></li>
               <li><a href="relation_guide-python.html">Python</a></li>
             </ul>
           </li>
@@ -66,7 +66,7 @@ isHome: true
             <ul class="list-unstyled list-platform">
               <li><a href="acl_guide-android.html">Android</a></li>
               <li><a href="acl_guide-ios.html">Objective-C</a></li>
-              <li><a href="acl_guide-js.html">Javascript</a></li>
+              <li><a href="acl_guide-js.html">JavaScript</a></li>
               <li><a href="acl_guide-python.html">Python</a></li>
             </ul>
           </li>
@@ -173,7 +173,7 @@ isHome: true
             <ul class="list-unstyled list-platform">
               <li><a href="realtime_guide-android.html">Android</a></li>
               <li><a href="realtime_guide-ios.html">Objective-C</a></li>
-              <li><a href="realtime_guide-js.html">Javascript</a></li>
+              <li><a href="realtime_guide-js.html">JavaScript</a></li>
               <li><a href="realtime_guide-dotnet.html">.Net/Unity3D</a></li>
             </ul>
           </li>
@@ -229,7 +229,7 @@ isHome: true
             <ul class="list-unstyled list-platform">
               <li><a href="android_push_guide.html">Android</a></li>
               <li><a href="ios_push_guide.html">Objective-C</a></li>
-              <li><a href="js_push.html">Javascript</a></li>
+              <li><a href="js_push.html">JavaScript</a></li>
             </ul>
           </li>
           <li><a href="android_push_guide.html#混合推送">Android 混合推送使用指南</a></li>
@@ -270,7 +270,7 @@ isHome: true
             <ul class="list-unstyled list-platform">
               <li><a href="android_statistics.html">Android</a></li>
               <li><a href="ios_statistics.html">Objective-C</a></li>
-              <li><a href="js_analytics.html">Javascript</a></li>
+              <li><a href="js_analytics.html">JavaScript</a></li>
               <li><a href="unity_statistics.html">Unity3D</a></li>
             </ul>
           </li>
@@ -317,7 +317,7 @@ isHome: true
             <ul class="list-unstyled list-platform">
               <li><a href="sms_guide-android.html">Android</a></li>
               <li><a href="sms_guide-ios.html">Objective-C</a></li>
-              <li><a href="sms_guide-js.html">Javascript</a></li>
+              <li><a href="sms_guide-js.html">JavaScript</a></li>
             </ul>
           </li>
           {% endif %}
@@ -352,8 +352,8 @@ isHome: true
         <ul class="list-unstyled">
           <li><a href="/api-docs/android/index.html" target="_blank">Android SDK API</a></li>
           <li><a href="/api-docs/iOS/index.html" target="_blank">Objective-C SDK API</a></li>
-          <li><a href="/api-docs/javascript/index.html" target="_blank">Javascript 数据存储 SDK API</a></li>
-          <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">Javascript 实时通信 SDK API</a></li>
+          <li><a href="/api-docs/javascript/index.html" target="_blank">JavaScript 数据存储 SDK API</a></li>
+          <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">JavaScript 实时通信 SDK API</a></li>
           <li><a href="/api-docs/python/leancloud.html">Python SDK API</a></li>
           <li><a href="/api-docs/php/" target="_blank">PHP SDK API</a></li>
           <li><a href="/api-docs/dotnet/Help/index.html">.NET SDK API</a></li>
