fix(index): update Python SDK API docs' link

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -354,7 +354,7 @@ isHome: true
           <li><a href="/api-docs/iOS/index.html" target="_blank">Objective-C SDK API</a></li>
           <li><a href="/api-docs/javascript/index.html" target="_blank">JavaScript 数据存储 SDK API</a></li>
           <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">JavaScript 实时通信 SDK API</a></li>
-          <li><a href="/api-docs/python/leancloud.html">Python SDK API</a></li>
+          <li><a href="https://leancloud.readthedocs.io/">Python SDK API</a></li>
           <li><a href="/api-docs/php/" target="_blank">PHP SDK API</a></li>
           <li><a href="/api-docs/dotnet/Help/index.html">.NET SDK API</a></li>
         </ul>
