fix(index): update Python SDK API docs' link
Closes #1554

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -113,7 +113,7 @@
             <li><a href="leanstorage_guide-python.html">数据存储开发指南</a></li>
             <li><a href="relation_guide-python.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-python.html">权限管理使用指南</a></li>
-            <li><a href="/api-docs/python/leancloud.html" target="_blank">SDK API</a></li>
+            <li><a href="https://leancloud.readthedocs.io/" target="_blank">SDK API</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">云引擎</li>
             <li><a href="leanengine_guide-python.html">云引擎开发指南</a></li>
