fix(docs): [云引擎] 日志打印频率每分钟 600 条改为 600 行 (#1562)
Closes #1561

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -711,7 +711,7 @@ Cron 表达式的基本语法为：
 
 {% block loggerExample %}{% endblock %}
 
-**注意**：日志单行最大 4096 个字符，多余部分会被丢弃；日志输出频率大于 600 条/分钟，多余的部分会被丢弃。
+**注意**：日志单行最大 4096 个字符，多余部分会被丢弃；日志输出频率大于 600 行/分钟，多余的部分会被丢弃。
 
 ## 网站托管
 
