首页：fix  archor position

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -22,11 +22,15 @@ isHome: true
 </div>
 
 <!-- .doc-home-title -->
-<div id="section-nav" class="scrollspy text-center  mobile-hide">
-  <div class="spinner"></div>
-  <ul class="nav">
-  </ul>
+<div style="height:100px;">
+&nbsp;
+  <div id="section-nav" class="scrollspy text-center  mobile-hide">
+    <div class="spinner"></div>
+    <ul class="nav">
+    </ul>
+  </div>
 </div>
+
 <!-- .toc-hack -->
 
 <div class="row">
@@ -93,13 +97,13 @@ isHome: true
           <li><a href="rest_api.html">数据存储 REST API</a></li>
         </ul>
       </div>
-      <!-- end of .section-content --> 
-      
+      <!-- end of .section-content -->
+
     </div>
-    <!-- end of .row(nested) --> 
-    
+    <!-- end of .row(nested) -->
+
   </div>
-  <!-- end of .section --> 
+  <!-- end of .section -->
 </div>
 <!-- end of .row(outermost) -->
 
@@ -150,12 +154,12 @@ isHome: true
           <li><a href="error_code.html">错误码详解</a></li>
         </ul>
       </div>
-      <!-- end of .section-content --> 
+      <!-- end of .section-content -->
     </div>
-    <!-- end of .row(nested) --> 
-    
+    <!-- end of .row(nested) -->
+
   </div>
-  <!-- end of .section --> 
+  <!-- end of .section -->
 </div>
 <!-- end of .row(outermost) -->
 
@@ -206,12 +210,12 @@ isHome: true
           <li><a href="realtime_rest_api.html">实时通信 REST API</a></li>
         </ul>
       </div>
-      <!-- end of .section-content --> 
+      <!-- end of .section-content -->
     </div>
-    <!-- end of .row(nested) --> 
-    
+    <!-- end of .row(nested) -->
+
   </div>
-  <!-- end of .section --> 
+  <!-- end of .section -->
 </div>
 <!-- end of .row(outermost) -->
 
@@ -248,12 +252,12 @@ isHome: true
           <li><a href="rest_api.html#Push_通知">消息推送 REST API</a></li>
         </ul>
       </div>
-      <!-- end of .section-content --> 
+      <!-- end of .section-content -->
     </div>
-    <!-- end of .row(nested) --> 
-    
+    <!-- end of .row(nested) -->
+
   </div>
-  <!-- end of .section --> 
+  <!-- end of .section -->
 </div>
 <!-- end of .row(outermost) -->
 
@@ -288,12 +292,12 @@ isHome: true
           <li><a href="rest_api.html#统计数据_API">移动统计 API</a></li>
         </ul>
       </div>
-      <!-- end of .section-content --> 
+      <!-- end of .section-content -->
     </div>
-    <!-- end of .row(nested) --> 
-    
+    <!-- end of .row(nested) -->
+
   </div>
-  <!-- end of .section --> 
+  <!-- end of .section -->
 </div>
 <!-- end of .row(outermost) -->
 
@@ -334,12 +338,12 @@ isHome: true
           <li><a href="faq_list.html">常见问题</a></li>
         </ul>
       </div>
-      <!-- end of .section-content --> 
+      <!-- end of .section-content -->
     </div>
-    <!-- end of .row(nested) --> 
-    
+    <!-- end of .row(nested) -->
+
   </div>
-  <!-- end of .section --> 
+  <!-- end of .section -->
 </div>
 <!-- end of .row(outermost) -->
 
@@ -384,10 +388,10 @@ isHome: true
           <li><a href="faq_list.html">常见问题</a></li>
         </ul>
       </div>
-      <!-- end of .section-content --> 
+      <!-- end of .section-content -->
     </div>
-    <!-- end of .row(nested) --> 
+    <!-- end of .row(nested) -->
   </div>
-  <!-- end of .section --> 
+  <!-- end of .section -->
 </div>
 <!-- end of .row(outermost) -->
