recover lean_cli

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -135,12 +135,14 @@ isHome: true
           </li>
           <li><a href="leanengine_guide-python.html">云引擎开发指南（Python）</a></li>
           <li><a href="leancache_guide.html">LeanCache 使用指南</a></li>
+          <li><a href="leanengine_cli.html">命令行工具使用详解</a></li>
         </ul>
       </div>
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>最佳实践</h3>
         <ul class="list-unstyled">
           <li><a href="leanengine_examples.html">几个典型场景下的云引擎项目示例</a></li>
+          <li><a href="acl_guide_leanengine.html">在云引擎中使用 ACL</a></li>
           <li><a href="https://blog.leancloud.cn/3437/" target="_blank">在云引擎中使用 WebSocket</a></li>
           <li><a href="https://forum.leancloud.cn/t/leanengine/8426" target="_blank">来自稀土的云引擎最佳实践之用户系统</a></li>
           <li><a href="https://blog.leancloud.cn/4133/" target="_blank">使用 New Relic 监控云引擎应用的性能</a></li>
