fix(docs): [nav] 增加应用内社交和应用内搜索的 REST API 链接 (#1572)
Closes #1571

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -150,6 +150,8 @@
             <li><a href="rest_sms_api.html">短信验证 API</a></li>
             {% endif %}
             <li><a href="rest_api.html#统计数据_API">数据统计 API</a></li>
+            <li><a href="status_system.html#REST_API">应用内社交 API</a></li>
+            <li><a href="app_search_guide.html#搜索_API">应用内搜索 API</a></li>
             <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
             <li><a href="oauth2_provider.html">开放平台接入</a></li>
             <!-- <li><a href="rest_faq.html">FAQ</a></li> -->
