--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -327,6 +327,8 @@ isHome: true
             </ul>
           </li>
           {% endif %}
+          <li><a href="status_system.html#REST_API">应用内社交 REST API</a></li>
+          <li><a href="app_search_guide.html#搜索_API">应用内搜索 REST API</a></li>
           <li><a href="oauth2_provider.html">LeanCloud 开放平台接入</a></li>
         </ul>
       </div>
