--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -74,6 +74,7 @@
           <ul class="dropdown-menu">
             <li><a href="sdk_setup-js.html">SDK 安装指南</a></li>
             <li><a href="leanstorage_guide-js.html">数据存储开发指南</a></li>
+            <li><a href="weapp.html">微信小程序开发指南</a></li>
             <li><a href="js_push.html">消息推送开发指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
