fead: add python webhosting guide (#1583)

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -121,6 +121,7 @@ isHome: true
           <li>
             <span>网站托管开发指南</span>
             <ul class="list-unstyled list-platform">
+              <li><a href="leanengine_webhosting_guide-python.html">Python</a></li>
               <li><a href="leanengine_webhosting_guide-node.html">Node.js</a></li>
               <li><a href="leanengine_webhosting_guide-php.html">PHP</a></li>
               <li><a href="leanengine_webhosting_guide-java.html">Java</a></li>
