--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -13,7 +13,7 @@
 这篇文档以 {{platformName}} 为例，但云引擎还支持其他多种语言，你可以选择自己熟悉的技术栈进行开发：
 
 - [Node.js](leanengine_webhosting_guide-node.html)
-- [Python](leanengine_guide-python.html)
+- [Python](leanengine_webhosting_guide-python.html)
 - [PHP](leanengine_webhosting_guide-php.html)
 - [Java](leanengine_webhosting_guide-java.html)
 
