feat: add leanengine_cloudfunction_guide-python (#1598)

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -117,7 +117,8 @@
             <li><a href="https://leancloud.readthedocs.io/" target="_blank">SDK API</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">云引擎</li>
-            <li><a href="leanengine_guide-python.html">云引擎开发指南</a></li>
+            <li><a href="leanengine_webhosting_guide-python.html">网站托管开发指南</a></li>
+            <li><a href="leanengine_cloudfunction_guide-python.html">云函数开发指南</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -170,7 +171,8 @@
           <li><a href="leanengine_webhosting_guide-node.html">网站托管开发指南</a></li>
           <li><a href="leanengine_cloudfunction_guide-node.html">云函数开发指南</a></li>
           <li class="dropdown-header">Python</li>
-          <li><a href="leanengine_guide-python.html">云引擎开发指南</a></li>
+          <li><a href="leanengine_webhosting_guide-python.html">网站托管开发指南</a></li>
+          <li><a href="leanengine_cloudfunction_guide-python.html">云函数开发指南</a></li>
           <li class="dropdown-header">PHP</li>
           <li><a href="leanengine_webhosting_guide-php.html">网站托管开发指南</a></li>
           <li><a href="leanengine_cloudfunction_guide-php.html">云函数开发指南</a></li>
