--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -130,12 +130,12 @@ isHome: true
           <li>
             <span>云函数开发指南</span>
             <ul class="list-unstyled list-platform">
+              <li><a href="leanengine_cloudfunction_guide-Python.html">Python</a></li>
               <li><a href="leanengine_cloudfunction_guide-node.html">Node.js</a></li>
               <li><a href="leanengine_cloudfunction_guide-php.html">PHP</a></li>
               <li><a href="leanengine_cloudfunction_guide-java.html">Java</a></li>
             </ul>
           </li>
-          <li><a href="leanengine_guide-python.html">云引擎开发指南（Python）</a></li>
           <li><a href="leancache_guide.html">LeanCache 使用指南</a></li>
           <li><a href="leanengine_cli.html">命令行工具使用详解</a></li>
         </ul>
