--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -24,7 +24,7 @@
 云引擎支持多种语言的运行环境，你可以选择自己熟悉的语言开发应用：
 
 - [Node.js](leanengine_cloudfunction_guide-node.html)
-- [Python](leanengine_guide-python.html)
+- [Python](leanengine_cloudfunction_guide-python.html)
 - [PHP](leanengine_cloudfunction_guide-php.html)
 - [Java](leanengine_cloudfunction_guide-java.html)
 
